// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div>
  <div
    class="container"
    data-testid="chat-badge"
  >
    <div
      class="title"
    >
      zendesk chat
    </div>
    <div
      class="splashDisplayContainer splashPadding"
      role="button"
      tabindex="0"
    >
      <table
        class="splashTable"
      >
        <tbody>
          <tr>
            <td
              class="textContainer"
            />
            <td
              class="imageContainer"
            >
              <span
                class="container chatIcon Icon--channelChoice-chat"
                data-testid="Icon--channelChoice-chat"
                type="Icon--channelChoice-chat"
              >
                <svg
                  aria-hidden="true"
                  realfilename="widget-icon_channelChoice-chat.svg"
                />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="inputContainer"
    >
      <div
        class="text__c-txt___Uzv-G range__c-range___1aYaS "
      >
        <input
          aria-describedby="garden-field-container-0--hint"
          aria-invalid="false"
          aria-labelledby="garden-field-container-0--label"
          class="input text__c-txt__input___38pRd "
          data-garden-id="forms.input"
          data-garden-version="7.0.2"
          data-testid="message-field"
          id="garden-field-container-0--input"
          placeholder="Type your message here"
          value=""
        />
      </div>
      <span
        class="container sendButton Icon--sendChat"
        data-testid="Icon--sendChat"
        role="button"
        tabindex="0"
        type="Icon--sendChat"
      >
        <svg
          aria-hidden="true"
          realfilename="widget-icon_sendChat.svg"
        />
      </span>
    </div>
    <span
      class="container minimizeButton Icon--dash"
      data-testid="Icon--dash"
      role="button"
      tabindex="0"
      type="Icon--dash"
    >
      <svg
        aria-hidden="true"
        realfilename="widget-icon_dash.svg"
      />
    </span>
  </div>
</div>
`;

exports[`with chatBadgeColor passed in 1`] = `
<div>
  <div
    class="container"
    data-testid="chat-badge"
  >
    <div
      class="title"
    >
      zendesk chat
    </div>
    <div
      class="splashDisplayContainer splashPadding"
      role="button"
      tabindex="0"
    >
      <table
        class="splashTable"
      >
        <tbody>
          <tr>
            <td
              class="textContainer"
            />
            <td
              class="imageContainer"
            >
              <span
                class="container chatIcon Icon--channelChoice-chat"
                data-testid="Icon--channelChoice-chat"
                type="Icon--channelChoice-chat"
              >
                <svg
                  aria-hidden="true"
                  realfilename="widget-icon_channelChoice-chat.svg"
                />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="inputContainer"
    >
      <div
        class="text__c-txt___Uzv-G range__c-range___1aYaS "
      >
        <input
          aria-describedby="garden-field-container-1--hint"
          aria-invalid="false"
          aria-labelledby="garden-field-container-1--label"
          class="input text__c-txt__input___38pRd "
          data-garden-id="forms.input"
          data-garden-version="7.0.2"
          data-testid="message-field"
          id="garden-field-container-1--input"
          placeholder="Type your message here"
          value=""
        />
      </div>
      <span
        class="container sendButton Icon--sendChat"
        data-testid="Icon--sendChat"
        role="button"
        tabindex="0"
        type="Icon--sendChat"
      >
        <svg
          aria-hidden="true"
          realfilename="widget-icon_sendChat.svg"
        />
      </span>
    </div>
    <span
      class="container minimizeButton Icon--dash"
      data-testid="Icon--dash"
      role="button"
      tabindex="0"
      type="Icon--dash"
    >
      <svg
        aria-hidden="true"
        realfilename="widget-icon_dash.svg"
      />
    </span>
  </div>
</div>
`;

exports[`with label passed in 1`] = `
<div>
  <div
    class="container"
    data-testid="chat-badge"
  >
    <div
      class="title"
    >
      zendesk chat
    </div>
    <div
      class="splashDisplayContainer splashPadding"
      role="button"
      tabindex="0"
    >
      <table
        class="splashTable"
      >
        <tbody>
          <tr>
            <td
              class="textContainer"
            >
              wanna chat?
            </td>
            <td
              class="imageContainer"
            >
              <span
                class="container chatIcon Icon--channelChoice-chat"
                data-testid="Icon--channelChoice-chat"
                type="Icon--channelChoice-chat"
              >
                <svg
                  aria-hidden="true"
                  realfilename="widget-icon_channelChoice-chat.svg"
                />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="inputContainer"
    >
      <div
        class="text__c-txt___Uzv-G range__c-range___1aYaS "
      >
        <input
          aria-describedby="garden-field-container-2--hint"
          aria-invalid="false"
          aria-labelledby="garden-field-container-2--label"
          class="input text__c-txt__input___38pRd "
          data-garden-id="forms.input"
          data-garden-version="7.0.2"
          data-testid="message-field"
          id="garden-field-container-2--input"
          placeholder="Type your message here"
          value=""
        />
      </div>
      <span
        class="container sendButton Icon--sendChat"
        data-testid="Icon--sendChat"
        role="button"
        tabindex="0"
        type="Icon--sendChat"
      >
        <svg
          aria-hidden="true"
          realfilename="widget-icon_sendChat.svg"
        />
      </span>
    </div>
    <span
      class="container minimizeButton Icon--dash"
      data-testid="Icon--dash"
      role="button"
      tabindex="0"
      type="Icon--dash"
    >
      <svg
        aria-hidden="true"
        realfilename="widget-icon_dash.svg"
      />
    </span>
  </div>
</div>
`;
